# visiona

./: .gdbinit  .gitignore  CMakeLists.txt  debug.sh  todo.md  wait.sh
config/: cible_01.cfg  complete.cfg  simple.cfg
generator/: Target.py  generator.py
include/: MarkerDetectorConfig.h  MarkerDetector_impl.h  Visiona.h
src/: MarkerDetectorConfig.cpp  MarkerDetector_impl.cpp  Visiona.cpp  batchdetector.cpp  simpledetector.cpp  testdetector.cpp
